public/style.css
html,
body {
  height: 100%;
  width: 100%;
  font-size: 100%;
  padding:2em;
  overflow: hidden;
}

.container {
  width:100%;
  height: 80vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: rgb(250, 228, 188);

}
.container2{
  width: 75%;
  height: 70vh;
  margin-inline: 10%;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: rgb(250, 228, 188)
}
a {
  text-decoration: none;
  color: violet;
  font-weight: 500;
  font-size: large;
}
.input-greet{
  display:inline-flex;
  justify-content: space-between;
  align-items:center;
  margin-left: 15%;
}
p{
  font-weight: 900;
  font-size: x-large;
  color: purple;
}
.button-primary,
input[type="submit"].button-primary,
input[type="submit"].button-primary {
  color: #fff;
  border-color: navajowhite;
  background-color:purple;
  border-radius: 1em;
}

.buttons {
  margin-left:40% ;
  display: flex;
  flex-direction: row;
  width: 50%;
}
.nav{
  float: right;
  overflow: auto;
  display: inline-flex;
  margin-left: 80%;
  margin-top: 15%;
}
.home, .users{
  padding:1%;
  margin:2%
}
.nav2{
  display: flex;
  float: right;
  margin-left: 70%;
}
.header2{
  color: purple;
  font-weight: 800;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  width: 100%;
  font-size: xx-large;
  margin-left: 70%;
}
.red {
  color: red;
}

.message {
  color: Teal;
  font-size:x-large;
  font-weight: bolder;
}

.languages {
  display: inline-flex;
  font-weight: 900;
  color: cadetblue;
  width: 60%;
  margin-inline:30%;
  margin-bottom: 5%;
  margin-top: 5%;
}
label{
  color: orchid;
  font-weight: 700;
  font-size: larger;
  width: 100%;
}
.alert {
  display: none;
  color: violet;
  margin-top: 10px; 
}
.header{
  color: purple;
  font-weight: 800;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  width: 100%;
  font-size: xx-large;
  margin-left: 60%;
}

h2{
  color: orchid;
  font-weight:800;
  margin-block: 10%;
}
h3,h5,h6,th{
  color: orchid;
  font-weight:800;
  font-size: large;
}
/* Small screens */
@media only screen and (max-width: 34em) {
  .container,.container2 {
    width: 85%;
    height: 50vh;
  }

}

/* Medium screens */
@media only screen and (min-width: 35em) {
  .container,.container2 {
    max-width: 80%;
  
  }

}

/* Large screens */
@media only screen and (min-width: 55em) {
  .container,.container2 {
    max-width: 85%;
   
  }
}

